--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,16 @@
         <li><%= link_to "About", about_path %></li>
   </ul>
 
-<div class="pull-right user-info">
-           <% if current_user %>
-             Hello <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-           <% else %>
-             <%= link_to "Sign In", new_user_session_path %> or 
-             <%= link_to "Sign Up", new_user_registration_path %>
-           <% end %>
-         </div>
+  <div class="pull-right user-info">
+      <% if current_user %>
+        <%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
+        Hello <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>!  
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign In", new_user_session_path %> or 
+        <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %>
+  </div>
 
 
   <% if flash[:notice] %>
