--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= markdown @post.title %></h1>
+<%= image_tag(@post.image.normal.url) if @post.image? %>
 
 <div class="row">
   <div class="col-md-8">
@@ -15,5 +16,9 @@
     <% end %>
   </div>
 </div>
+
+   
+
+
 
 
