--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,6 +13,12 @@
       <%= f.label :title %>
       <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
     <% end %>
+    <p>Upload an Image</p>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+    <%= f.hidden_field :image_cache %>
+  </div>
     <%= form_group_tag(post.errors[:body]) do %>
       <%= f.label :body %>
       <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
@@ -21,3 +27,12 @@
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
 <% end %>
+
+
+      
+      
+  
+           
+       
+
+
