Paginated the topics

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,5 @@
 <h1><%= markdown @post.title %></h1>
-<%= image_tag(@post.image.normal.url) if @post.image? %>
-
+<%= image_tag(@post.image.normal.url) if @post.image? %>s
 <div class="row">
   <div class="col-md-8">
      <small>
