--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,17 @@
   </div>
 </div>
 
+<div class="row">
+  <h2>Comments</h2>
+  <div class='col-md-12'>
+    <div class='js-comments'>
+      <%= render partial: 'comments/comment', collection: @comments %>
+    </div>
+    <div class='new-comment'>
+      <%= render 'comments/form' %>
+    </div>
+  </div>
+</div>
    
 
 
