--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,10 @@
+
 <% if current_user %>
   <h4>Add a comment:</h4>
-  <%= form_for [@post, @post.comments.build], remote: true do |f| %>
+  <%= form_for [@topic, @post, @post.comments.new] do |f| %>
     <%= f.label :body %>
-    <%= f.text_field :body %>
+    <%= f.text_area :body %>
     <%= f.submit %>
   <% end %>
 <% end %>
+
