--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 
 <% if current_user %>
   <h4>Add a comment:</h4>
-  <%= form_for [@topic, @post, @post.comments.new] do |f| %>
+  <%= form_for [ @post, @post.comments.new] do |f| %>
     <%= f.label :body %>
     <%= f.text_area :body %>
     <%= f.submit %>
